# DepGraph

./: .gitignore  README.md  dfs_in_depgraph.md  pyproject.toml  walkthrough of v1
depgraph/: __init__.py  __main__.py  cli.py
depgraph/graph/: __init__.py  analyzer.py  builder.py  simulator.py
depgraph/parser/: __init__.py  lock_parser.py  models.py  toml_parser.py
depgraph/reporter/: __init__.py  console.py  json_export.py  visualizer.py
tests/: __init__.py  test_analyzer.py  test_graph.py  test_parser.py  test_simulator.py
tests/fixtures/sample_monorepo/analytics-api/: pyproject.toml
tests/fixtures/sample_monorepo/auth-service/: pyproject.toml
tests/fixtures/sample_monorepo/ml-service/: pyproject.toml
